--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
