--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@ionic/angular": "^7.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "ionicons": "^7.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.0",
+    "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
@@ -48,6 +51,7 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.2.8",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
